Prepare Prime 1.1.0 settings and documentation